Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 <p>Substitution Editor is a Java program that allows the user to create rhombic substitutions tilings.  It is based on <a href="http://www.dmtcs.org/dmtcs-ojs/index.php/dmtcs/article/view/2702">this paper in Discrete Mathematics &amp; Theoretical Computer Science</a>.  </p>
 
 <p>The tiles are rhombs with angles that are integer multiples of 180/N degrees, where N is an odd number (the selectable values of which are 5, 7, 9, 11, and 13).  There are (N - 1)/2 such rhombs, and it is possible to arrange N copies of the one with angles (2,N-2,2,N-2) to form an N-pointed star.  For some inflation factors, it is possible to find substitutions in which these N-pointed stars actually appear.  </p>
+
+<p>Substitution Editor is an open-source project, and the code can be downloaded from <a href="https://github.com/maloneyg/Substitution-Editor" target="_blank">the Substitution Editor github repository</a>.  </p>
       </section>
     </div>
 
