Test edit of github pages homepage.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Substitution-editor : A Java program for creating and editing rhombic substitution tilings">
+    <meta name="description" content="Substitution Editor : A Java program for creating and editing rhombic substitution tilings">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
