--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Substitution-editor</title>
+    <title>Substitution Editor</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/maloneyg/Substitution-Editor">View on GitHub</a>
 
-          <h1 id="project_title">Substitution-editor</h1>
+          <h1 id="project_title">Substitution Editor</h1>
           <h2 id="project_tagline">A Java program for creating and editing rhombic substitution tilings</h2>
 
             <section id="downloads">
