Added my Newcastle homepage to footer.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Substitution-editor maintained by <a href="https://github.com/maloneyg">maloneyg</a></p>
+        <p class="copyright">Substitution-editor maintained by <a href="https://www.staff.ncl.ac.uk/gregory.maloney/">Greg Maloney</a></p>
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
