Okay, the manual seems to be working now.

--- a/manual/manual.html
+++ b/manual/manual.html
@@ -52,6 +52,7 @@ in the terminal, after navigating to the directory where the .jar file is locate
 
 <p>After you have started the program, you should see a window that looks something like this:</p>
 
+<p><img src="launcher01.png" alt="The launcher window"></p>
 
 <p>This is the launcher window, where you select the properties of the substitution rule that you wish to edit.  These properties are the order of symmetry, the edge sequence, and the maximum number of substitutions.  </p>
 
@@ -98,6 +99,8 @@ in the terminal, after navigating to the directory where the .jar file is locate
 <p>After pressing the Go! button, you should see a window that looks something like this.  </p>
 
 <p><img src="editor01.png" alt="The editor window"></p>
+
+<p>The editor in this image was created by choosing 7-fold symmetry, the edge sequence [1, -1, 0, 1, -1, -2, 2, 0], and a maximum of 3 substitutions in the launcher window.  </p>
 
 
       </section>
